[package]
name = "rtoy-rt"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"

[dependencies]
rendertoy = { git = "https://github.com/h3r2tic/rendertoy" }
#rendertoy = { path = "../rendertoy" }
snoozy = { git = "https://github.com/h3r2tic/snoozy" }
bvh = { git = "https://github.com/h3r2tic/bvh", branch = "immutable-build" }
static_assertions = "0.3.1"
half = "1.3.0"
